[Sync] Display correct message for actionable error

When server returns actionable error corresponding message should be
shown on settings page. Today generic unrecoverable error is shown.

In this change if unrecoverable error is accompanied by actionable error
message for actionable error is returned.

BUG=595094
R=maxbogue@chromium.org

Review-Url: https://codereview.chromium.org/2044003005
Cr-Commit-Position: refs/heads/master@{#398462}

Former-commit-id: 49f91d87dfbb0c72efff8aa74a7f299980034344